--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,20 @@
   <artifactId>thehistory</artifactId>
   <packaging>jar</packaging>
   <version>1.0</version>
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13-beta-2</version>
+      <scope>compile</scope>
+    </dependency>
+  </dependencies>
 
   <properties>
     <maven.compiler.target>1.8</maven.compiler.target>
